<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <ImageView
        android:id="@+id/new_song_slider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@mipmap/defualt_img" />
    <RelativeLayout
        android:id="@+id/btradio"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_gravity="right"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/buttonorange_shape"
      >

        <ImageView
            android:id="@+id/ivartistplaylist"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/playlist"
            android:adjustViewBounds="true"
            android:src="@mipmap/artistplaylistnew"

            />

        <com.binarywaves.ghaneely.ghannelystyles.CustomTextViewSemiBold
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/ivartistplaylist"
            android:layout_toRightOf="@id/ivartistplaylist"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"
            android:text="@string/playlistartist"
            android:textColor="@color/ghaneely_orange" />
    </RelativeLayout>
</LinearLayout>