<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/darkgray"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/close_player"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_gravity="right"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@mipmap/closefinal" />


        <com.binarywaves.ghaneely.ghannelystyles.CustomEditText
            android:id="@+id/mobilenumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0.02"
            android:background="@drawable/edit_text_shape"
            android:digits="01234567891"
            android:ems="10"
            android:gravity="center"

            android:hint="@string/mobile_hint"
            android:inputType="phone"
            android:textColor="@color/white"
            android:textColorHint="@color/fadedgray"
            android:textCursorDrawable="@color/ghaneely_orange"
            android:textSize="16sp">

            <requestFocus />
        </com.binarywaves.ghaneely.ghannelystyles.CustomEditText>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <com.binarywaves.ghaneely.ghannelystyles.CustomButton
            android:id="@+id/change"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/ghaneely_orange"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/sendactivate"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/albumtextsize"
            android:layout_alignParentStart="true" />



    </RelativeLayout>

</LinearLayout>